--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spirax&display=swap" rel="stylesheet">
 
 
   <!-- jQuery library -->
@@ -43,23 +44,24 @@
     {% if data.country_code %}
     <div class="block">
         <div class="block1">
-            <h2>{{city}}</h2>
-            <h3>country code : {{data.country_code}}</h3>
-            <h5>coordinate : {{data.coordinate}}</h5>
+            <h1>{{city}}</h1>
+            <img class="city-image" src="../static/assets/images/Brown Simple Welcome January Instagram Post (Square) (1).png" alt="Description of the image">
+            <h4>Country Code : {{data.country_code}}</h4>
+            <h4>Coordinate : {{data.coordinate}}</h4>
         </div>
         <div class="block2">
           <h4 class="temp-label">Temperature</h4>
           <div class="temp-block">
-              <h5 class="temp"> {{data.temp}}</h5>
+              <h4 class="temp"> {{data.temp}}</h4>
           </div>
           <h4 class="press-label">Pressure</h4>
           <div class="press-block">
-            <h5 class="pressure">{{data.pressure}} </h5>
+              <h4 class="pressure">{{data.pressure}} </h4>
           </div>
           <h4 class="humid-label">Humidity</h4>
           <div class="humid-block">
-          <h5 class="humidity"> {{data.humidity}}</h5>
-          </div>
+              <h4 class="humidity"> {{data.humidity}}</h4>
+        </div>
       </div>
     </div>
     {% endif %}
