--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -32,13 +32,14 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 .nav-style 
 {
     display: flex;
     width: 527px;
-    height: 94px;
+    height: 100px;
     padding: 21px 51px;
     justify-content: center;
     align-items: center;
@@ -48,13 +49,24 @@ body {
     background: var(--third-color);
     box-shadow: -3px 4px 4px 0px rgba(0, 0, 0, 0.25) inset; 
     color: var(--primary-color);
+    /* text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ffffff; */
 }
+
+/* .nav-style:hover {
+    background-color:var(--third-color); 
+    /* text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ffffff; */
+    /* color: var(--secondary-color);
+    cursor: pointer;
+} */
+
 h1 {
     font-size: var(--pc-medium); /* Adjust this value as needed */
 }
 
 .center-div {
-    align: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
 }
 
 .form-control {
@@ -70,7 +82,13 @@ h1 {
 .btn {
     color: var(--primary-color); 
     font-size: 20px; 
-    margin-right: 10px; 
+    margin-right: 10px;
+    background-color: var(--background); 
+}
+
+.btn:hover {
+    background-color: #234E70; 
+    cursor: pointer;
 }
 
 .block {
@@ -101,10 +119,21 @@ h1
     color: var(--primary-color);
 }
 
+h1:hover {
+    color: #B27FA0; 
+    cursor: pointer; 
+}
+
+
 h4
 {
     color: var(--primary-color);
     /* padding: 10px;  */
+}
+
+h4:hover {
+    color: #B27FA0; 
+    cursor: pointer; 
 }
 
 .city-image 
