--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -26,6 +26,12 @@
     margin:2rem;
 }
 
+.row
+{
+    margin:0;
+    padding:0;
+}
+
 body {
     background-image: url("../images/citybg.png");
     background-repeat: no-repeat;
@@ -95,7 +101,7 @@ h1 {
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
-    margin-top: 45px;
+    margin-top: 40px;
 }
 
 .block1 
@@ -105,7 +111,8 @@ h1 {
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     backdrop-filter: blur(7.5px);
     width: 25%;
-    height: 300px;
+    /* height: 300px; */
+    height: auto;
     flex-shrink: 0;
     display: flex; 
     align-items: center; 
@@ -128,7 +135,8 @@ h1:hover {
 h4
 {
     color: var(--primary-color);
-    /* padding: 10px;  */
+    padding: 10px; 
+    text-align: center;
 }
 
 h4:hover {
@@ -150,7 +158,9 @@ h4:hover {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    height: 280px;
+    /* height: 280px; */
+    width: auto;
+    height:auto;
 }
 
 .temp {
@@ -248,5 +258,33 @@ h4:hover {
         justify-content: center; 
         align-items: center;
     }
-    
-} 
+    .block1 {
+        width: 90%;
+        height: auto;
+    }
+    .block2 {
+        height: auto;
+        align-items: center;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+    .nav-style {
+        width: 100%; 
+        padding: 20px; 
+    }
+    .block {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center;
+    }
+    .block1 {
+        width: 50%;
+        height: auto;
+    }
+    .block2 {
+        height: auto;
+        align-items: center;
+    }
+}
