--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,15 @@
     </div>
     {% endif %}
 </div>
+<footer class="footer">
+  <div class="links">
+    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+    <a href="https://twitter.com/" target="_blank">Twitter</a>
+    <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+  </div>
+  <p class="rights">© 2024 Weather Detector. All rights reserved.</p>
+</footer>
 </body>
 
 </html>
