City not found 404 response code exception handled Rather than showing error screen, error is detected and custom output is shown.

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -68,7 +68,12 @@ body {
 h1 {
     font-size: var(--pc-medium); /* Adjust this value as needed */
 }
-
+.cityNotFound{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    padding: 20px;
+}
 .center-div {
     display: flex;
     justify-content: center; 
